# whisper_ggml

./: .gitignore  CLAUDE.md  LINUX_BUILD_ANALYSIS.md  LINUX_IMPLEMENTATION.md  LINUX_SOLUTION.md  README.md  pubspec.yaml
example/: pubspec.yaml  test_simple.dart  test_whisper_load.dart
example/integration_test/: whisper_test.dart
example/lib/: test_ffi.dart
lib/src/: process_runner.dart  whisper.dart  whisper_audio_convert.dart  whisper_controller.dart
linux/: CMakeLists.txt  README.md  whisper_ggml.cpp
linux/whisper.cpp/: ggml.c
test/: run_tests.sh  test_utils.dart  whisper_audio_convert_test.dart
test/integration/: whisper_audio_convert_integration_test.dart
